# game-of-life

./: CMakeLists.txt  README.md
src/: Cell.hpp  GameOfLife.cpp  GameOfLife.hpp  main.cpp
src/core/: GameEngine.cpp  GameEngine.hpp  Grid.cpp  Grid.hpp
src/graphics/: Renderer.cpp  Renderer.hpp
src/input/: InputHandler.cpp  InputHandler.hpp
src/patterns/: PatternManager.cpp  PatternManager.hpp
src/ui/: Button.cpp  Button.hpp  UIManager.cpp  UIManager.hpp
